--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ h1 {
   font-family: Raleway;
   margin-left: auto;
   margin-right: auto;
-  max-width: 70%;
+  max-width: 80%;
   font-size: 80px;
 }
 
@@ -22,4 +22,6 @@ h2 {
   margin-left: auto;
   margin-right: auto;
   padding-top: 380px;
+  padding-bottom: 0px;
+  
 }
