--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,86 @@ h1 {
   font-size: 80px;
 }
 
+div{
+  padding-bottom:0;
+  padding-top:380px;
+}
+
 h2 {
+  color: gray;
+  font-family: Raleway;
+  font-size: 70px;
+  width: 100%
+}
+.project {
   color: gray;
   font-family: Raleway;
   font-size: 70px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 380px;
-  padding-bottom: 0px;
-  
+  -webkit-transition: background 2s;
+  transition: background 2s;
+}
+
+.project:hover {
+  background: blue;
+}
+
+.about {
+  color: gray;
+  font-family: Raleway;
+  font-size: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-transition: background 1.5s;
+  transition: background 1s;
+}
+
+.about:hover {
+  background: red;
+}
+
+#contact::before {
+  color: gray;
+  font-family: Raleway;
+  font-size: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-transition: background all 2s;
+  transition: background all 2s;
+}
+
+#contact:hover::before {
+    content: '';
+    position: fixed;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    background-color: green;
+}
+
+#contact::before {
+  color: gray;
+  content:"";
+  font-family: Raleway;
+  font-size: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-transition: background all 2s;
+  transition: background all 2s;
+}
+
+#contact:hover::before {
+    content: '';
+    position: fixed;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    background-color: green;
 }
