--- a/css/main.css
+++ b/css/main.css
@@ -15,29 +15,24 @@ h1 {
   font-size: 80px;
 }
 
-div{
-  padding-bottom:0;
-  padding-top:380px;
+p {
+  padding-bottom: 90px;
 }
 
-h2 {
-  color: gray;
-  font-family: Raleway;
-  font-size: 70px;
-  width: 100%
-}
+
 .project {
   color: gray;
   font-family: Raleway;
   font-size: 70px;
   margin-left: auto;
   margin-right: auto;
-  -webkit-transition: background 2s;
-  transition: background 2s;
+  -webkit-transition: background-color 1.5s;
+  transition: background-color 1.5s;
 }
 
+
 .project:hover {
-  background: blue;
+  background-color: white;
 }
 
 .about {
@@ -47,54 +42,48 @@ h2 {
   margin-left: auto;
   margin-right: auto;
   -webkit-transition: background 1.5s;
-  transition: background 1s;
+  transition: background 1.5s;
 }
 
 .about:hover {
-  background: red;
+  background: white;
 }
 
-#contact::before {
-  color: gray;
+.contact {
   font-family: Raleway;
   font-size: 70px;
   margin-left: auto;
   margin-right: auto;
-  -webkit-transition: background all 2s;
-  transition: background all 2s;
+  -webkit-transition: background-color 2s;
+  transition: background-color 2s;
+  transition-property: #bg,all;
+  
 }
 
-#contact:hover::before {
-    content: '';
-    position: fixed;
-    display: block;
+.contact:hover {
+    background: white;
+}
+
+.bg {
+    position: absolute;
     top: 0;
+    right: 0;
     bottom: 0;
     left: 0;
-    right: 0;
+    width: 100%;
+    height: 290%;
     z-index: -1;
-    background-color: green;
+    background: #EEE;
+    transition: background 2s;
 }
 
-#contact::before {
-  color: gray;
-  content:"";
-  font-family: Raleway;
-  font-size: 70px;
-  margin-left: auto;
-  margin-right: auto;
-  -webkit-transition: background all 2s;
-  transition: background all 2s;
-}
 
-#contact:hover::before {
-    content: '';
-    position: fixed;
-    display: block;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: -1;
-    background-color: green;
+h2:hover ~ .bg {
+    background: blue;
+}
+h3:hover ~ .bg {
+    background: red;
+}
+h4:hover ~ .bg {
+    background: green;
 }
