--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ h1 {
 
 h2 {
   font-family: Raleway;
+  background: #bff8d4;
   font-size: 15px;
 }
 
@@ -42,6 +43,7 @@ div {
   justify-content:space-around;
 }
 a {
+  background: #47d6b6;
   font-family: Raleway;
   color: #808080;
   text-decoration: none;
