--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@ svg {
 }
 
 div:not(.color-wrapper) {
+  width: 100%;
+  height: 60%;
   -webkit-clip-path: url(#clip-00);
   clip-path: url(#clip-00);
   
@@ -16,3 +18,4 @@ div:not(.color-wrapper) {
 .color-wrapper {
   background-color: black;
 }
+
