--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,12 @@ svg {
   position: absolute;
 }
 
-.video-container video {
-  width: 50%;
+.video-container{
+  video {
   display: block;
   -webkit-clip-path: url(#clip-00);
           clip-path: url(#clip-00);
-}
+  }
+  width: 50%;
+  margin: 40px auto;
+  }
