--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,13 @@ body {
   overflow: hidden;
 }
 
+@media only screen and (device-width: 850px),
+only screen and (max-width:850px) {
+.css-element {
+yourcsscode:;
+}
+   }
+
 /* Video */
 
 .video-background {
