--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-
-
-@media only screen and (device-width: 850px),
-only screen and (max-width:850px) {
-.css-element {
 * {
   box-sizing: border-box;
 }
@@ -10,8 +5,12 @@ only screen and (max-width:850px) {
 body {
   font-family: Helvetica Neue, bold;
     height: 100vh;
-  overflow: hidden;
+  overflow: visible;
 }
+.module {
+  resize: both;
+}
+
 /* Video */
 
 .video-background {
@@ -106,7 +105,3 @@ body {
   color: #eee;
   border-color: #eee;
 }
-
-}
-   }
-
