--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,7 @@ body {
     height: 100vh;
   overflow: visible;
 }
-.module {
-  resize: both;
-}
+
 
 /* Video */
 
@@ -25,7 +23,7 @@ body {
 }
 .video-foreground,
 .video-background iframe {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -50,7 +48,7 @@ body {
 /* Knockout Text */
 
 .knockout-text {
-  position: absolute;
+  position: relative;
   top: 0;
   display: flex;
   justify-content: center;
@@ -79,7 +77,7 @@ body {
 /* Change Theme Button */
 
 .theme-btn {
-  position: absolute;
+  position: relative;
   top: 1em;
   left: 1em;
   font-family: inherit;
