--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
 .video-background {
   background: url(https://images.unsplash.com/photo-1519373344801-14c1f9539c9c?w=1920&h=1080&fit=crop&crop=bottom) no-repeat center;
   background-size: cover;
-  position: fixed;
+  position: relative;
   top: 0;
   right: 0;
   bottom: 0;
@@ -55,10 +55,9 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
-    font-size: 1000%;
   font-weight: 900;
   letter-spacing: 0.0em;
-    margin: auto;
+  margin: auto;
   user-select: none;  
 }
 
