--- a/css/main.css
+++ b/css/main.css
@@ -3,18 +3,17 @@
 }
 
 body {
-  font-family: Helvetica Neue, bold;
+  font-family: Arial, sans-serif;
     height: 100vh;
-  overflow: visible;
+  overflow: hidden;
 }
-
 
 /* Video */
 
 .video-background {
   background: url(https://images.unsplash.com/photo-1519373344801-14c1f9539c9c?w=1920&h=1080&fit=crop&crop=bottom) no-repeat center;
   background-size: cover;
-  position: relative;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
@@ -23,7 +22,7 @@ body {
 }
 .video-foreground,
 .video-background iframe {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -48,21 +47,22 @@ body {
 /* Knockout Text */
 
 .knockout-text {
-  position: relative;
+  position: absolute;
   top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+    font-size: calc(10px + 4.5vw + 2.5vh);
   font-weight: 900;
-  letter-spacing: 0.0em;
-  margin: auto;
-  user-select: none;  
+  letter-spacing: 0em;
+    margin: auto;
+  user-select: none;
 }
 
 .light-theme .knockout-text {
-  background-color: white;
+  background-color: #fff;
     color: #000;
     mix-blend-mode: screen;
 }
@@ -76,7 +76,7 @@ body {
 /* Change Theme Button */
 
 .theme-btn {
-  position: relative;
+  position: absolute;
   top: 1em;
   left: 1em;
   font-family: inherit;
