--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
 /* Video */
 
 .video-background {
-  background: url(https://images.unsplash.com/photo-1519373344801-14c1f9539c9c?w=1920&h=1080&fit=crop&crop=bottom) no-repeat center;
+  background: #838585;
   background-size: cover;
   position: fixed;
   top: 0;
