--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
-    font-size: calc(10px + 4.5vw + 2.5vh);
+    font-size: calc(10px + 7vw + 5vh);
   font-weight: 900;
   letter-spacing: 0em;
     margin: auto;
@@ -72,6 +72,27 @@ body {
     color: #fff;
     mix-blend-mode: multiply;
 }
+
+/* Detail Text */
+
+.detail-text {
+   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  position: absolute;
+  top: calc(30px + 30vh);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-size: calc(1px + 3vw + 5vh);
+  font-weight: 10;
+  letter-spacing: 0em;
+  margin: auto;
+  user-select: none;
+  color: #838585;
+}
+
+
 
 /* Change Theme Button */
 
