Intro: changing light/dark mode button

--- a/css/main.css
+++ b/css/main.css
@@ -101,13 +101,12 @@ body {
   top: 1em;
   left: 1em;
   font-family: inherit;
-  font-size: calc(15px + 0.1vw + 0.5vh);
-  border-width: 0.15em;
+  font-size: calc(15px + 0.1vw + 0.1vh);
+  border-width: .15em;
   border-style: solid;
-  border-radius: 0.8em;
-  background-color: transparent;
+  border-radius: 1em;
   margin: 0 auto;
-  padding: 0.8em 1.2em;
+  padding: 0.8em .8em;
   cursor: pointer;
   outline: none;
   white-space: nowrap;
@@ -117,9 +116,11 @@ body {
 .light-theme .theme-btn {
   color: #1a1a1a;
   border-color: #1a1a1a;
+    background-color: #1a1a1a;
 }
 
 .dark-theme .theme-btn {
   color: #eee;
+    background-color: #eee;
   border-color: #eee;
 }
