--- a/css/main.css
+++ b/css/main.css
@@ -1,122 +1,20 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
-  font-family: Arial, sans-serif;
-    height: 100vh;
-  overflow: hidden;
+  background: black;
+  margin: 0;
 }
-
-/* Video */
-
-.video-background {
-  background: #838585 center;
-  background-size: cover;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-}
-.video-foreground,
-.video-background video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-}
-
-@media (min-aspect-ratio: 16/9) {
-  .video-foreground {
-    height: 300%;
-    top: -100%;
-  }
-}
-
-@media (max-aspect-ratio: 16/9) {
-  .video-foreground {
-    width: 300%;
-    left: -100%;
-  }
-}
-
-/* Knockout Text */
-
-.knockout-text {
-  position: absolute;
-  top: 0;
+main {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
-  font-size: calc(10px + 5vw + 3vh);
-  font-weight: 900;
-  letter-spacing: 0em;
-    margin: auto;
-  user-select: none;
 }
-
-.light-theme .knockout-text {
-  background-color: #fff;
-    color: #000;
-    mix-blend-mode: screen;
-}
-
-.dark-theme .knockout-text {
-  background-color: #000;
-    color: #fff;
-    mix-blend-mode: multiply;
-}
-
-/* Detail Text */
-
-.detail-text {
-   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  position: absolute;
-  top: calc(30px + 30vh);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-    font-size: calc(1px + 1vw + 1.5vh);
-  font-weight: 10;
-  letter-spacing: 0em;
-    margin: auto;
-  user-select: none;
-    color: #838585;
-}
-
-
-
-/* Change Theme Button */
-
-.theme-btn {
-  position: absolute;
-  top: 3em;
-  left: 3em;
-  border-radius: 100%;
-  margin: 0 auto;
-  padding: 1em 1em;
-  cursor: pointer;
-  outline: none;
-  white-space: nowrap;
-  user-select: none;
-}
-
-.light-theme .theme-btn {
-  color: #1a1a1a;
-  border-color: #1a1a1a;
-    background-color: #1a1a1a;
-}
-
-.dark-theme .theme-btn {
-  color: #eee;
-    background-color: #eee;
-  border-color: #eee;
+.text {
+  background: url(/css/VidOcean.mp4);
+  background-size: contain;
+  background-position: top left;
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 10rem;
+  font-weight: bold;
+  font-family: sans-serif;
 }
