--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,127 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  height: 100vh;
+  overflow: hidden;
+}
+
+/* Video */
+
+.video-background {
+  background: #838585 center;
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+.video-foreground,
+.video-background video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .video-foreground {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .video-foreground {
+    width: 300%;
+    left: -100%;
+  }
+}
+
+/* Knockout Text */
+
+.knockout-text {
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-size: calc(10px + 5vw + 3vh);
+  font-weight: 900;
+  letter-spacing: 0em;
+  margin: auto;
+  user-select: none;
+}
+
+.light-theme .knockout-text {
+  background-color: #fff;
+  color: #000;
+  mix-blend-mode: screen;
+}
+
+.dark-theme .knockout-text {
+  background-color: #000;
+  color: #fff;
+  mix-blend-mode: multiply;
+}
+
+
+/* Detail Text */
+
+.detail-text {
+  position: absolute;
+  top: calc(30px + 30vh);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-size: calc(1px + 1vw + 1.5vh);
+  font-weight: 10;
+  letter-spacing: 0em;
+  margin: auto;
+  user-select: none;
+  color: #838585;
+}
+
+
+
+/* Change Theme Button */
+
+.theme-btn {
+  position: absolute;
+  top: 3em;
+  left: 3em;
+  border-radius: 100%;
+  margin: 0 auto;
+  padding: 1em 1em;
+  cursor: pointer;
+  outline: none;
+  white-space: nowrap;
+  user-select: none;
+}
+
+.light-theme .theme-btn {
+  color: #1a1a1a;
+  border-color: #1a1a1a;
+    background-color: #1a1a1a;
+}
+
+.dark-theme .theme-btn {
+  color: #eee;
+    background-color: #eee;
+  border-color: #eee;
+}
+
+
 /* Basic info */
 
 .page-title {
@@ -19,10 +143,10 @@
 .page-text{
   position: absolute;
   top: 18vh;
-  left: 10vw;
+  left: 6vw;
   display: block;
   word-wrap: normal;
-  max-width: 40vw;
+  max-width: 60vw;
   width: 100%;
   height: 100%;
   font-size: calc(1px + 2vw + 3vh);
@@ -38,30 +162,24 @@
   position: absolute;
   display: block;
   word-wrap: normal;
-  max-width: 40vw;
-  font-size: calc(1px + 2vw + 3vh);
-  font-weight: 10;
-  letter-spacing: 0em;
+  font-size: calc(1px + 1vw + 1vh);
   margin: auto;
   user-select: none;
   text-decoration:none;
+  top: 8vh;
 }
 
 #one.nav-button{
-  top: 18vh;
-  left: 70vw;
+  left: 75vw;
 }
 #two.nav-button{
-  top: 38vh;
-  left: 70vw;
+  left: 79.5vw;
 }
 #three.nav-button{
-  top: 58vh;
-  left: 70vw;
+  left: 85vw;
 }
 #four.nav-button{
-  top: 78vh;
-  left: 70vw;
+  left: 90.5vw;
 }
 
 
