--- a/css/home.css
+++ b/css/home.css
@@ -1,127 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  height: 100vh;
-  overflow: hidden;
-}
-
-/* Video */
-
-.video-background {
-  background: #838585 center;
-  background-size: cover;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-}
-.video-foreground,
-.video-background video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-}
-
-@media (min-aspect-ratio: 16/9) {
-  .video-foreground {
-    height: 300%;
-    top: -100%;
-  }
-}
-
-@media (max-aspect-ratio: 16/9) {
-  .video-foreground {
-    width: 300%;
-    left: -100%;
-  }
-}
-
-/* Knockout Text */
-
-.knockout-text {
-  position: absolute;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  font-size: calc(10px + 5vw + 3vh);
-  font-weight: 900;
-  letter-spacing: 0em;
-  margin: auto;
-  user-select: none;
-}
-
-.light-theme .knockout-text {
-  background-color: #fff;
-  color: #000;
-  mix-blend-mode: screen;
-}
-
-.dark-theme .knockout-text {
-  background-color: #000;
-  color: #fff;
-  mix-blend-mode: multiply;
-}
-
-
-/* Detail Text */
-
-.detail-text {
-  position: absolute;
-  top: calc(30px + 30vh);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  font-size: calc(1px + 1vw + 1.5vh);
-  font-weight: 10;
-  letter-spacing: 0em;
-  margin: auto;
-  user-select: none;
-  color: #838585;
-}
-
-
-
-/* Change Theme Button */
-
-.theme-btn {
-  position: absolute;
-  top: 3em;
-  left: 3em;
-  border-radius: 100%;
-  margin: 0 auto;
-  padding: 1em 1em;
-  cursor: pointer;
-  outline: none;
-  white-space: nowrap;
-  user-select: none;
-}
-
-.light-theme .theme-btn {
-  color: #1a1a1a;
-  border-color: #1a1a1a;
-    background-color: #1a1a1a;
-}
-
-.dark-theme .theme-btn {
-  color: #eee;
-    background-color: #eee;
-  border-color: #eee;
-}
-
-
 /* Basic info */
 
 .page-title {
@@ -142,11 +18,11 @@ body {
 
 .page-text{
   position: absolute;
-  top: 18vh;
-  left: 6vw;
+  top: 30%;
+  left: 7%;
   display: block;
   word-wrap: normal;
-  max-width: 60vw;
+  max-width: 40%;
   width: 100%;
   height: 100%;
   font-size: calc(1px + 2vw + 3vh);
@@ -156,32 +32,6 @@ body {
   user-select: none;
   color: #838585; 
 }
-
-.nav-button
-{
-  position: absolute;
-  display: block;
-  word-wrap: normal;
-  font-size: calc(1px + 1vw + 1vh);
-  margin: auto;
-  user-select: none;
-  text-decoration:none;
-  top: 8vh;
-}
-
-#one.nav-button{
-  left: 75vw;
-}
-#two.nav-button{
-  left: 79.5vw;
-}
-#three.nav-button{
-  left: 85vw;
-}
-#four.nav-button{
-  left: 90.5vw;
-}
-
 
 .dark-theme .nav-button
 {
@@ -194,16 +44,101 @@ body {
     color: black;
 }
 
-.dark-theme
-{
-    background: black;
+
+.dropbtn {
+  background-color: gray;
+  border: none;
+  padding: 12px 12px;
+  cursor: pointer;
+  user-select: none;
 }
 
-
-.light-theme
-{
-    background: white;
+.dropdown {
+  position: absolute;
+  top: 8%;
+  right: 2%;
+  display: inline-block;
 }
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+}
 
+.dropdown-content a {
+  width: 120px;
+  height: 60px;
+  padding: 20px 0px;
+  text-decoration: none;
+  display: block;
+  text-align: right;
+  
+}
 
+.dark-theme .dropdown-content a {
+  color: white;
+}
+
+.light-theme .dropdown-content a {
+  color: black;
+}
+
+.dropdown-content a:hover {
+  font-size: 30px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dark-theme .dropdown:hover .dropbtn {
+  background-color: white;
+}
+
+.light-theme .dropdown:hover .dropbtn {
+  background-color: black;
+}
+
+.light-theme .page-text .pop1{
+  color: black;
+}
+
+.light-theme .page-text .pop2{
+  color: black;
+}
+
+.light-theme .page-text .pop3{
+  color: black;
+}
+
+.dark-theme .page-text .pop1{
+  color: white;
+}
+
+.dark-theme .page-text .pop2{
+  color: white;
+}
+
+.dark-theme .page-text .pop3{
+  color: white;
+}
+
+.page-text .pop1:hover{
+  color: green;
+}
+
+.page-text .pop2:hover{
+  color: red;
+}
+
+.page-text .pop3:hover{
+  color: blue;
+}
+
+.name-image{
+  width: 20%;
+  position: absolute;
+  right: 25%;
+  top: 30%;
+}
