--- a/css/home.css
+++ b/css/home.css
@@ -51,6 +51,7 @@
   padding: 12px 12px;
   cursor: pointer;
   user-select: none;
+  transition: 0.3s;
 }
 
 .dropdown {
@@ -61,9 +62,10 @@
 }
 
 .dropdown-content {
-  display: none;
+  opacity: 0;
   position: absolute;
   right: 0;
+  transition: 0.3s;
 }
 
 .dropdown-content a {
@@ -71,6 +73,7 @@
   height: 60px;
   padding: 20px 0px;
   text-decoration: none;
+    transition: 0.3s;
   display: block;
   text-align: right;
   
@@ -89,7 +92,7 @@
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+  opacity: 1;
 }
 
 .dark-theme .dropdown:hover .dropbtn {
@@ -124,6 +127,27 @@
   color: white;
 }
 
+.page-text .pop1:hover .popimg1{
+  opacity: 1;
+}
+.page-text .pop1:hover .caption{
+  opacity: 1;
+}
+
+.page-text .pop2:hover .popimg2{
+  opacity: 1;
+}
+.page-text .pop2:hover .caption{
+  opacity: 1;
+}
+
+.page-text .pop3:hover .popimg3{
+  opacity: 1;
+}
+.page-text .pop3:hover .caption{
+  opacity: 1;
+}
+
 .page-text .pop1:hover{
   color: green;
 }
@@ -136,9 +160,38 @@
   color: blue;
 }
 
-.name-image{
-  width: 20%;
+
+.info-img{
+  width: 70%;
   position: absolute;
-  right: 25%;
-  top: 30%;
+  left: 120%;
+  z-index:-1;
+  top: 0%;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.caption{
+  position: absolute;
+  left: 120%;
+  z-index:-1;
+  top: 80%;
+  opacity: 0;
+  width: 70%;
+  transition: 0.5s;
+  font-size: 60%;
+  font-weight:100;
+  text-align: center;
+}
+
+.light-theme .caption{
+    background-color: white;
+    color: black;
+  
+}
+
+.dark-theme .caption{
+    background-color: black;
+    color: white;
+  
 }
