--- a/css/main.css
+++ b/css/main.css
@@ -8,17 +8,6 @@ body {
   overflow: hidden;
 }
 
-.dark-theme
-{
-    background: black;
-}
-
-
-.light-theme
-{
-    background: white;
-}
-
 /* Video */
 
 .video-background {
@@ -109,8 +98,8 @@ body {
 
 .theme-btn {
   position: absolute;
-  top: 9%;
-  left: 3%;
+  top: 3em;
+  left: 3em;
   border-radius: 100%;
   margin: 0 auto;
   padding: 1em 1em;
@@ -131,98 +120,3 @@ body {
     background-color: #eee;
   border-color: #eee;
 }
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: gray;
-  border: none;
-  padding: 12px 12px;
-  cursor: pointer;
-  user-select: none;
-  transition: 0.3s;
-}
-
-.dropdown {
-  position: absolute;
-  top: 8%;
-  right: 2%;
-  display: inline-block;
-}
-
-.dropdown-content {
-  opacity: 0;
-  position: absolute;
-  right: 0;
-  transition: 0.3s;
-}
-
-.dropdown-content a {
-  width: 120px;
-  height: 60px;
-  padding: 20px 0px;
-  text-decoration: none;
-    transition: 0.3s;
-  display: block;
-  text-align: right;
-  
-}
-
-.dark-theme .dropdown-content a {
-  color: white;
-}
-
-.light-theme .dropdown-content a {
-  color: black;
-}
-
-.dropdown-content a:hover {
-  font-size: 30px;
-}
-
-.dropdown:hover .dropdown-content {
-  opacity: 1;
-}
-
-.dark-theme .dropdown:hover .dropbtn {
-  background-color: white;
-}
-
-.light-theme .dropdown:hover .dropbtn {
-  background-color: black;
-}
-
-/* Basic info */
-
-.page-title {
-  position: absolute;
-  top: calc(30px + 30vh);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  font-size: calc(1px + 1vw + 1.5vh);
-  font-weight: 10;
-  letter-spacing: 0em;
-  margin: auto;
-  user-select: none;
-  color: #838585;
-}
-
-.page-text{
-  position: absolute;
-  top: 30%;
-  left: 7%;
-  display: block;
-  word-wrap: normal;
-  max-width: 40%;
-  width: 100%;
-  height: 100%;
-  font-size: calc(1px + 2vw + 3vh);
-  font-weight: 10;
-  letter-spacing: 0em;
-  margin: auto;
-  user-select: none;
-  color: #838585; 
-}
-
