--- a/css/home.css
+++ b/css/home.css
@@ -194,3 +194,19 @@
 {
     background: white;
 }
+
+.pop1{
+  font-weight: bold;
+  text-decoration:none;
+}
+
+.pop2{
+  font-weight: bold;
+  text-decoration:none;
+
+}
+
+.pop3{
+  font-weight: bold;
+  text-decoration:none;
+}
