--- a/css/home.css
+++ b/css/home.css
@@ -63,7 +63,7 @@
   text-decoration: none;
   transition: 0.3s;
   font-size: 45px;
-  display: block;
+  display: none;
   text-align: right;
 }
 
@@ -81,6 +81,7 @@
 
 .dropdown:hover .dropdown-content {
   opacity: 1;
+  display: block;
 }
 
 .dark-theme .dropdown:hover .dropbtn {
@@ -145,6 +146,39 @@
 }
 
 .page-text .pop3:hover{
+  color: blue;
+}
+
+.page-text .pop1:active .popimg1{
+  opacity: 1;
+}
+.page-text .pop1:active .caption{
+  opacity: 1;
+}
+
+.page-text .pop2:active .popimg2{
+  opacity: 1;
+}
+.page-text .pop2:active .caption{
+  opacity: 1;
+}
+
+.page-text .pop3:active .popimg3{
+  opacity: 1;
+}
+.page-text .pop3:active .caption{
+  opacity: 1;
+}
+
+.page-text .pop1:active{
+  color: green;
+}
+
+.page-text .pop2:active{
+  color: red;
+}
+
+.page-text .pop3:active{
   color: blue;
 }
 
