--- a/css/home.css
+++ b/css/home.css
@@ -40,6 +40,7 @@
   cursor: pointer;
   user-select: none;
   transition: 0.3s;
+  z-index: 3;
 }
 
 .dropdown {
@@ -47,6 +48,7 @@
   top: 8%;
   right: 2%;
   display: inline-block;
+  z-index: 3;
 }
 
 .dropdown-content {
@@ -54,6 +56,7 @@
   position: absolute;
   right: 0;
   transition: 0.3s;
+  z-index: 3;
 }
 
 .dropdown-content a {
@@ -65,6 +68,7 @@
   font-size: 45px;
   display: block;
   text-align: right;
+  z-index: 3;
 }
 
 .dark-theme .dropdown-content a {
