--- a/css/home.css
+++ b/css/home.css
@@ -140,6 +140,13 @@
   opacity: 1;
 }
 
+.page-text .pop4:hover .popimg4 {
+  opacity: 1;
+}
+.page-text .pop4:hover .caption {
+  opacity: 1;
+}
+
 .page-text .pop1:hover {
   color: green;
 }
@@ -173,6 +180,13 @@
   opacity: 1;
 }
 
+.page-text .pop4:active .popimg4 {
+  opacity: 1;
+}
+.page-text .pop4:active .caption {
+  opacity: 1;
+}
+
 .page-text .pop1:active {
   color: green;
 }
@@ -184,6 +198,38 @@
 .page-text .pop3:active {
   color: blue;
 }
+
+.google{
+  display : inline-block;
+  z-index: 1;
+}
+
+.dark-theme .google {
+  color: white;
+}
+.light-theme .google {
+  color: black;
+}
+
+.google:hover .G {
+  color: #4285f4;
+}
+.google:hover .o {
+  color: #db4437;
+}
+.google:hover .o2 {
+  color: #f4b400;
+}
+.google:hover .g {
+  color: #4285f4;
+}
+.google:hover .l {
+  color: #0f9d58;
+}
+.google:hover .e {
+  color: #db4437;
+}
+
 
 .info-img {
   width: 50%;
